# 20questions

./: .gitignore  20q_env_plan.md  make_plot.py  test_twenty_questions.py  twenty_questions_v0.md  your_env_VS_existing.md
20questions_env/: README.md  pyproject.toml  twenty_questions.py
20questions_env/.prime/: .env-metadata.json
envs/GoodSirMath8k/: GoodSirMath8k.py  README.md  pyproject.toml
envs/GoodSirMath8k/.prime/: .env-metadata.json
envs/MAPP/: MAPP.py  README.md  pyproject.toml  visualize_run.py
envs/MAPP/.prime/: .env-metadata.json
envs/MAPP/mapp_data/: eval_scenarios.json
envs/MAPP/world/: __init__.py  agent.py  gridworld.py  scenarioGenerator.py
envs/OpenMed_MedMCQA/: OpenMed_MedMCQA.py  README.md  pyproject.toml
envs/OpenMed_MedMCQA/.prime/: .env-metadata.json
envs/acebench_agent_multistep/: README.md  acebench_agent_multistep.py  original_repo_test_script.py  pyproject.toml
envs/acebench_agent_multistep/.prime/: .env-metadata.json
envs/agentclinic_extended/: README.md  agentclinic_extended.py  pyproject.toml
envs/agentclinic_extended/.prime/: .env-metadata.json
envs/agentclinic_nejm/: README.md  agentclinic_nejm.py  pyproject.toml
envs/agentclinic_nejm/.prime/: .env-metadata.json
envs/balrog_prime/: README.md  balrog_prime.py  pyproject.toml
envs/balrog_prime/.prime/: .env-metadata.json
envs/balrog_prime/scripts/: summarize_results.py
envs/frontierscience/: README.md  frontierscience.py  pyproject.toml
envs/frontierscience/.prime/: .env-metadata.json
envs/hud_browser_2048/: README.md  hud_browser_2048.py  pyproject.toml
envs/hud_browser_2048/.prime/: .env-metadata.json
envs/hud_text_2048/: README.md  hud_text_2048.py  pyproject.toml
envs/hud_text_2048/.prime/: .env-metadata.json
envs/ifeval/: README.md  ifeval.py  pyproject.toml
envs/ifeval/.prime/: .env-metadata.json
envs/ifeval/ifeval_utils/: ifeval_rubric.py  ifeval_singleturn.py
envs/lights_out/: README.md  generate-boards.py  lights_out.py  pyproject.toml
envs/lights_out/.prime/: .env-metadata.json
envs/nanogpt_speedrun/: README.md  nanogpt_speedrun.py  pyproject.toml
envs/nanogpt_speedrun/.prime/: .env-metadata.json
envs/nanogpt_speedrun/data/: record_01.py  record_12.py  record_20.py  record_26.py  record_27.py  speedrun_records.jsonl
envs/pmpp/: README.md  pyproject.toml
envs/pmpp/.prime/: .env-metadata.json
envs/pmpp/pmpp/: __init__.py  fastapi_server.py  pmpp.py
envs/pmpp/pmpp/datasets/: pmpp_coding.jsonl  pmpp_qa.jsonl
envs/pmpp/pmpp/eval-tasks/ch00-multi-arch-demo/: Makefile  README.md  benchmark.cu  reference_solution.cu  student_kernel.cu  test_demo.cu
envs/pmpp/pmpp/eval-tasks/ch02-vecadd-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_vecadd.cu
envs/pmpp/pmpp/eval-tasks/ch02-vecmul-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_vecmul.cu
envs/pmpp/pmpp/eval-tasks/ch03-ex1a-matmul-row-per-thread/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_matmul_row.cu
envs/pmpp/pmpp/eval-tasks/ch03-ex1b-matmul-col-per-thread/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_matmul_col.cu
envs/pmpp/pmpp/eval-tasks/ch03-rgb2gray-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_rgb2gray.cu
envs/pmpp/pmpp/eval-tasks/ch04-device-props-eval/: Makefile  README.md  reference_only_wrapper.cu  reference_solution.cu  student_kernel.cu  student_kernel.cuh  test_device_props.cu
envs/pmpp/pmpp/eval-tasks/ch05-matmul-tiled/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_matmul_tiled.cu
envs/pmpp/pmpp/eval-tasks/ch05-matmul-tiled-multiturn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_matmul.cu  test_reference  test_student
envs/pmpp/pmpp/eval-tasks/ch05-matmul-tiled-speed/: Makefile  README.md  reference_solution.cu  reference_student_wrapper.cu  student_kernel.cu  test_matmul_speed.cu  test_student
envs/pmpp/pmpp/eval-tasks/ch06-thread-coarsening-matmul/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_matmul_coarsened.cu
envs/pmpp/pmpp/eval-tasks/ch07-conv2d-tiled-constant/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_conv2d.cu
envs/pmpp/pmpp/eval-tasks/ch08-heat-3d-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_heat.cu  test_student
envs/pmpp/pmpp/eval-tasks/ch08-stencil3d-basic-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_stencil_basic.cu
envs/pmpp/pmpp/eval-tasks/ch08-stencil3d-sharedmem-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_stencil_shared.cu
envs/pmpp/pmpp/eval-tasks/ch09-histogram-naive-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_histogram.cu
envs/pmpp/pmpp/eval-tasks/ch09-histogram-shared-single-turn/: README.md  reference_solution.cu  student_kernel.cu  test_histogram.cu
envs/pmpp/pmpp/eval-tasks/ch10-reduction-max-arbitrary/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_max_arbitrary.cu
envs/pmpp/pmpp/eval-tasks/ch10-reduction-sum-2048/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_sum_2048.cu
envs/pmpp/pmpp/eval-tasks/ch10-reduction-sum-arbitrary/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_sum_arbitrary.cu
envs/pmpp/pmpp/eval-tasks/ch12-merge-path-single-turn/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_merge_path.cu
envs/pmpp/pmpp/eval-tasks/ch13-merge-path-fullsort-single/: Makefile  README.md  reference_solution.cu  student_kernel.cu  test_merge_sort.cu  test_student
envs/pmpp/pmpp/eval-tasks/ch13-radix-multiradix-fullsort-single/: Makefile  (+4 more)
envs/pmpp/pmpp/utils/: __init__.py  coding_eval.py  fastapi_client.py  local_async_runner.py  logging_config.py  qa_eval.py  task_downloader.py
envs/q_programming_language/: README.md  pyproject.toml  q_programming_language.py
envs/q_programming_language/.prime/: .env-metadata.json
(+342 files in other folders)
