[project]
name = "twenty-questions"
description = "20 Questions multi-turn game: LLM agent identifies a secret word by asking yes/no questions answered by an LLM oracle"
tags = ["multi-turn", "game", "reasoning", "language", "train", "eval"]
version = "0.3.3"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.9.post3",
    "openai>=1.0.0",
    "nltk>=3.9.0",
    "wordfreq>=3.1.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "twenty_questions.py",
    "pool/pool_enriched.json",
]

[tool.verifiers.eval]
num_examples = 50
rollouts_per_example = 1

[project.entry-points."verifiers.environments"]
twenty_questions = "twenty_questions:load_environment"
