[project]
name = "MAPP"
description = "Multi-Agent Path Planning Environment for reinforcement learning research"
tags = ["multi-agent", "path-planning", "reinforcement-learning", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["MAPP.py", "world/"]
