[project]
name = "agentclinic_extended"
description = "AgentClinic environment with multiturn for MEDQA cases"
tags = ["medical", "multiturn", "evaluation", "verifiable-reward"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["agentclinic_extended.py"]
