[project]
name = "agentclinic_nejm"
description = "AgentClinic NEJM environment with image-based medical cases for medical evaluation"
tags = ["medical", "multiturn", "evaluation", "verifiable-reward", "nejm", "imaging"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["agentclinic_nejm.py"]
