[project]
name = "balrog-prime"
description = "BALROG (Benchmarking Agentic LLM and VLM Reasoning On Games) environments (NLE, MiniHack, BabyAI, TextWorld, Babaisai, Crafter)."
tags = ["multi-turn", "balrog", "NLE", "MiniHack", "BabyAI", "TextWorld", "Babaisai", "Crafter", "eval", "VLM", "interactive", "long-horizon", "Reasoning", "Game", "Agentic"]
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "omegaconf>=2.3.0",
    "setuptools"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["balrog_prime.py"]

[project.entry-points."verifiers.environments"]
balrog_prime = "balrog_prime:load_environment"
