[project]
name = "hud-browser-2048"
version = "0.1.0"
description = "Browser-based 2048 game for evaluating agents using visual observations and keyboard actions"
readme = "README.md"
tags = ["game", "browser", "multimodal", "CUA", "2048"]
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.3",
    "hud-vf-gym"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hud_browser_2048.py"]
