[project]
name = "hud-text-2048"
version = "0.1.0"
description = "Text-based 2048 game for training agents to reach target tiles through strategic moves"
readme = "README.md"
tags = ["game", "strategy", "text", "2048"]
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.3",
    "hud-vf-gym"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hud_text_2048.py"]