[project]
name = "ifeval"
description = "IFEval single-turn chat environment using RLVR-IFeval with JSON constraint rewards. Heavily inspired by and incorporates a lot of Allen AI's RLVR code."
tags = ["ifeval", "single-turn", "rlvr", "chat", "constraints", "none-reasoning", "train", "eval"]
version = "0.1.1"
dependencies = [
    "verifiers>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "ifeval.py",
  "ifeval_utils/**",
]