[project]
name = "lights-out"
description = "Grid-based game where clicking toggles a light & its neighbors. Goal: all lights off."
tags = ["game", "train", "eval", "multi-turn", "grid"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["lights_out.py"]
