[project]
name = "nanogpt-speedrun"
description = "Evaluate code-generation and pretraining capabilities of LLMs via NanoGPT Speedrun benchmark."
tags = ["code-generation", "single-turn", "sandbox", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "datasets",
    "modal",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nanogpt_speedrun.py"]
