[project]
name = "pmpp"
description = "PMPP CUDA evaluation environment with local and FastAPI eval modes"
tags = ["cuda", "programming", "evaluation", "gpu"]
version = "1.1.3"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.7",
    "datasets>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "pmpp/**/*.py",
    "pmpp/datasets/*.jsonl",
    "pmpp/eval-tasks/**/*",
    "Dockerfile.fastapi",
    "docker-compose.yml",
    "Makefile",
    ".env.example",
    "README.md",
]
